# ServerLicense

./: .env.example  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Dockerfile  DownloadDocker.sh  New_Srtuct_of_DB.md  README.md  config.json  docker-compose.local.yml  docker-compose.yml  main.cpp  migration.json
.github/workflows/: deploy.yml
LicenseServer_autogen/: deps
ServerLicenseTests_autogen/: deps  moc_predefs.h
include/: AppConfig.h  AuthFilter.h  DatabaseController.h  ILicenseFile.h  LicenseController.h  LicenseFileJson.h  LicenseLib_Export.h  LicenseRecord.h  LicenseValidator.h  ServerVersion.h  version.h
include/controllers/: AuthController.h  CompanyController.h  ConfigurationController.h  EmployeeController.h  LicenseController.h  ModuleController.h
include/database/: DatabaseController.h
include/models/: AppConfig.h  CompanyRecord.h  LicenseData.h  LicenseRecord.h  LicenseValidator.h
public/: app.js  common.js  database.html  database.js  index.html  login.html  login.js  style.css
scripts/: backup.sh
src/: AppConfig.cpp  AuthController.cpp  AuthFilter.cpp  DatabaseController.cpp  LicenseController.cpp  LicenseData.cpp  LicenseValidator.cpp
src/Migration/: QtDBMigration.cpp  SchemaVersion.cpp
src/controllers/: AuthController.cpp  AuthFilter.cpp  CompanyController.cpp  ConfigurationController.cpp  EmployeeController.cpp  LicenseController.cpp  ModuleController.cpp
src/database/: DatabaseController.cpp
src/models/: AppConfig.cpp  LicenseData.cpp  LicenseValidator.cpp
tests/: AppConfigTest.cpp  test_main.cpp
